Update configuration
